# my-first-mcp

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: start.md
src/ai_assistant/: app.py
src/calendar_assistant/: server.py
src/cli_client/: client.py
src/code_analyzer/: server.py
src/file_watcher/: server.py
src/gmail_assistant/: server.py
src/gui_client/: client.py
src/image_analyzer/: app.py  server.py
src/mac_control/: server.py
src/reminder_server/: server.py
src/screen_server/: server.py
src/text_improver/: app.py  server.py
src/web_client/: app.py
src/win_control/: server.py
