[project]
name = "mac-control"
version = "0.1.0"
description = "An MCP server for controlling macOS"
requires-python = ">=3.8"
dependencies = [
    "mcp",
    "pydantic"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mac_control"]

[project.scripts]
mcp-server-mac = "mac_control.server:main" 