[project]
name = "os-control"
version = "0.1.0"
description = "MCP servers for controlling macOS and Windows"
requires-python = ">=3.8"
dependencies = [
    "mcp",
    "pydantic"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mac_control", "src/win_control"]

[project.scripts]
mcp-server-mac = "mac_control.server:main"
mcp-server-win = "win_control.server:main" 